Firmware/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:55:38 **** Incremental Build of configuration Debug for project Ruthless RFID ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/commands.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/commands.d" -MT"Core/Src/commands.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/commands.o"
../Core/Src/commands.c: In function 'cmd_mod':
../Core/Src/commands.c:150:13: error: void value not ignored as it ought to be
  150 |    new_name = str_toupper(args[i + 1]);
      |             ^
In file included from ../Core/Src/commands.c:9:
At top level:
../Core/Inc/terminal.h:34:20: warning: 'RR_TERMINALART' defined but not used [-Wunused-variable]
   34 | static const char* RR_TERMINALART[] = {
      |                    ^~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:64: Core/Src/commands.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
19:56:27 **** Incremental Build of configuration Debug for project Ruthless RFID ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/commands.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/commands.d" -MT"Core/Src/commands.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/commands.o"
In file included from ../Core/Src/commands.c:9:
../Core/Inc/terminal.h:34:20: warning: 'RR_TERMINALART' defined but not used [-Wunused-variable]
   34 | static const char* RR_TERMINALART[] = {
      |                    ^~~~~~~~~~~~~~
arm-none-eabi-gcc -o "Ruthless RFID.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\rhett\OneDrive\Documents\Ruthless RFID\Firmware\Ruthless RFID\STM32F401CBUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Ruthless RFID.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Ruthless RFID.elf
 
arm-none-eabi-size   Ruthless\ RFID.elf 
arm-none-eabi-objdump -h -S  Ruthless\ RFID.elf  > "Ruthless RFID.list"
   text	   data	    bss	    dec	    hex	filename
  80796	   1860	  42244	 124900	  1e7e4	Ruthless RFID.elf
Finished building: default.size.stdout
 
Finished building: Ruthless RFID.list
 
20:04:00 **** Incremental Build of configuration Debug for project Ruthless RFID ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/commands.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/commands.d" -MT"Core/Src/commands.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/commands.o"
arm-none-eabi-gcc "../Core/Src/ruthlessfs.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xC -c -I../Core/Inc -I../USB_DEVICE/App -I../USB_DEVICE/Target -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/ruthlessfs.d" -MT"Core/Src/ruthlessfs.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ruthlessfs.o"
../Core/Src/ruthlessfs.c: In function 'print_card_to_serial':
../Core/Src/ruthlessfs.c:264:2: warning: implicit declaration of function 'Print'; did you mean 'printf'? [-Wimplicit-function-declaration]
  264 |  Print(msg);
      |  ^~~~~
      |  printf
../Core/Src/ruthlessfs.c: In function 'get_used_size_str':
../Core/Src/ruthlessfs.c:522:20: warning: format '%i' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  522 |  sprintf(result, "%i", used);
      |                   ~^   ~~~~
      |                    |   |
      |                    int uint32_t {aka long unsigned int}
      |                   %li
../Core/Src/ruthlessfs.c: In function 'get_free_size_str':
../Core/Src/ruthlessfs.c:531:20: warning: format '%i' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  531 |  sprintf(result, "%i", free);
      |                   ~^   ~~~~
      |                    |   |
      |                    int uint32_t {aka long unsigned int}
      |                   %li
../Core/Src/ruthlessfs.c: In function 'get_total_writes_str':
../Core/Src/ruthlessfs.c:599:20: warning: format '%i' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  599 |  sprintf(result, "%i", get_total_writes());
      |                   ~^   ~~~~~~~~~~~~~~~~~~
      |                    |   |
      |                    int uint32_t {aka long unsigned int}
      |                   %li
../Core/Src/ruthlessfs.c: In function 'get_total_reads_str':
../Core/Src/ruthlessfs.c:610:20: warning: format '%i' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
  610 |  sprintf(result, "%i", get_total_reads());
      |                   ~^   ~~~~~~~~~~~~~~~~~
      |                    |   |
      |                    int uint32_t {aka long unsigned int}
      |                   %li
In file included from ../Core/Src/commands.c:9:
../Core/Inc/terminal.h:34:20: warning: 'RR_TERMINALART' defined but not used [-Wunused-variable]
   34 | static const char* RR_TERMINALART[] = {
      |                    ^~~~~~~~~~~~~~
arm-none-eabi-gcc -o "Ruthless RFID.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\rhett\OneDrive\Documents\Ruthless RFID\Firmware\Ruthless RFID\STM32F401CBUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Ruthless RFID.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Ruthless RFID.elf
 
arm-none-eabi-size   Ruthless\ RFID.elf 
arm-none-eabi-objdump -h -S  Ruthless\ RFID.elf  > "Ruthless RFID.list"
   text	   data	    bss	    dec	    hex	filename
  80828	   1860	  42244	 124932	  1e804	Ruthless RFID.elf
Finished building: default.size.stdout
 
Finished building: Ruthless RFID.list
 
